samples/_failures_safe/1761139424_79c752_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c046c7ef.c: In function ‘main’:
./samples/SAFE/__tmp_c046c7ef.c:163:5: error: expected identifier or ‘(’ at end of input
  163 |     for (int
      |     ^~~
./samples/SAFE/__tmp_c046c7ef.c:163:5: error: expected declaration or statement at end of input
